--- a/sass/org/_lib.scss
+++ b/sass/org/_lib.scss
@@ -88,7 +88,7 @@ $s-image-small  : calc(100vw/64);
 /*--------------------------------------------------------------
 ## Everything
 --------------------------------------------------------------*/
-*{
+*,h1,h2,h3,p,img,a,div{
 	transition: 1s;
 	margin:0;
 	padding:0;
