--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -17,7 +17,7 @@
 		background-position: center bottom;
 		
 		.h-base{
-			background-color:rgba(0,0,0,0.6);
+			background-color:$cla-d06;
 			height:21.875vw;
 			max-height:170px;
 			padding:1.5625vw;
@@ -122,11 +122,156 @@
 ## Top page First View
 --------------------------------------------------------------*/
 .tp-first{
+	margin-top:1.5625vw;
+	padding: 0 1.5625vw;
+	
+	display: grid;
+	
+	@include mq(xl) {
+		grid-template-columns: 62.5% 37.5%;
+		grid-template-rows: 36.328125vw 12.109375vw 12.109375vw;
+	
+		.tpf-carousel{
+			grid-column: 1 / 2;
+			grid-row: 1 / 4;
+		}
+		.tpf-atfirst{
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+		}
+	}		
+	@include mq(lg) {
+		grid-template-columns: 62.5% 37.5%;
+		grid-template-rows: 36.328125vw 12.109375vw 12.109375vw;
+	
+		.tpf-carousel{
+			grid-column: 1 / 2;
+			grid-row: 1 / 4;
+		}
+		.tpf-atfirst{
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+		}
+	}	
+	@include mq(md) {
+		grid-template-columns: 60% 40%;
+		grid-template-rows: 96.875vw 29.0625vw 29.0625vw;
+	
+		.tpf-carousel{
+			grid-column: 1 / 3;
+			grid-row: 1 / 2;
+		}
+		.tpf-atfirst{
+			grid-column: 1 / 2;
+			grid-row: 2 / 4;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+		}
+	}
+	@include mq(sm) {
+		grid-template-columns: 60% 40%;
+		grid-template-rows: 96.875vw 29.0625vw 29.0625vw;
+	
+		.tpf-carousel{
+			grid-column: 1 / 3;
+			grid-row: 1 / 2;
+		}
+		.tpf-atfirst{
+			grid-column: 1 / 2;
+			grid-row: 2 / 4;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 2 / 3;
+		}
+		.tpf-newest1{
+			grid-column: 2 / 3;
+			grid-row: 3 / 4;
+		}
+	}
+	
+	a{
+		text-decoration:none;
+	}
+	
 	.tpf-carousel{
+		height:100%;
+		width:100%;
+		overflow:hidden;
 	}
+	
 	.tpf-atfirst{
+		.tpfa-area{
+			height:100%;
+			width:100%;
+			
+			background-size:cover;
+			background-position: center;
+			
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: flex-end;
+			align-items: flex-end;
+			align-content: flex-end;
+			
+			filter:grayscale(80%) contrast(120%) brightness(120%);
+			
+			.tpfaa-categ,.tpfaa-title{
+				filter:none;
+				font-weight:normal;
+				color:$clb-g10
+			}
+			
+			.tpfaa-categ{
+				background-color:$cla-l08;
+				margin-right:1.5625vw;
+				padding: 0 1.5625vw;
+			}
+			.tpfaa-title{
+				background-color:$cla-d08;
+				margin:1.5625vw;
+				padding:1.5625vw;
+				text-align: center;
+			}
+		}
+		
 	}
-	.tpf-newest{
+	@include mq(sm) {
+		h2{
+			font-size:1em;
+			line-height:1.3em;
+			letter-spacing:0.2em;
+		}
+		p{
+			font-size:0.8em;
+			line-height:1.5em;
+			letter-spacing:0.2em;
+		}
 	}
+	
+	
 }
 
