--- a/style.css
+++ b/style.css
@@ -851,6 +851,30 @@ h1 {
   50% {
     transform: scale(1.3); } }
 
+@keyframes buruburu {
+  0% {
+    transform: translate(0, -1px) rotate(0deg); }
+  10% {
+    transform: translate(0, 0) rotate(-1deg); }
+  20% {
+    transform: translate(0, -1px) rotate(0deg); }
+  30% {
+    transform: translate(0, 0) rotate(1deg); }
+  40% {
+    transform: translate(0, -1px) rotate(0deg); }
+  5% {
+    transform: translate(0, 0) rotate(-1deg); }
+  60% {
+    transform: translate(0, -1px) rotate(0deg); }
+  70% {
+    transform: translate(0, 0) rotate(1deg); }
+  80% {
+    transform: translate(0, -1px) rotate(0deg); }
+  9% {
+    transform: translate(0, 0) rotate(-1deg); }
+  100% {
+    transform: translate(0, -1px) rotate(0deg); } }
+
 /*--------------------------------------------------------------
 ## MainView
 --------------------------------------------------------------*/
@@ -943,7 +967,16 @@ h1 {
 .tp-first {
   margin-top: 1.5625vw;
   padding: 0 1.5625vw;
-  display: grid; }
+  display: grid;
+  /*
+	.tpf-carousel::-webkit-scrollbar-track{
+		background-color:rgba(0,0,0,1);
+	}
+	.tpf-carousel::-webkit-scrollbar-thumb {
+		border-radius: 5px;
+		background: #1959A8;
+	}
+	*/ }
   @media screen and (max-width: 2400px) {
     .tp-first {
       grid-template-columns: 62.5% 37.5%;
@@ -957,7 +990,7 @@ h1 {
       .tp-first .tpf-newest1 {
         grid-column: 2 / 3;
         grid-row: 2 / 3; }
-      .tp-first .tpf-newest1 {
+      .tp-first .tpf-newest2 {
         grid-column: 2 / 3;
         grid-row: 3 / 4; } }
   @media screen and (max-width: 1200px) {
@@ -973,7 +1006,7 @@ h1 {
       .tp-first .tpf-newest1 {
         grid-column: 2 / 3;
         grid-row: 2 / 3; }
-      .tp-first .tpf-newest1 {
+      .tp-first .tpf-newest2 {
         grid-column: 2 / 3;
         grid-row: 3 / 4; } }
   @media screen and (max-width: 580px) {
@@ -989,7 +1022,7 @@ h1 {
       .tp-first .tpf-newest1 {
         grid-column: 2 / 3;
         grid-row: 2 / 3; }
-      .tp-first .tpf-newest1 {
+      .tp-first .tpf-newest2 {
         grid-column: 2 / 3;
         grid-row: 3 / 4; } }
   @media screen and (max-width: 374px) {
@@ -1005,16 +1038,37 @@ h1 {
       .tp-first .tpf-newest1 {
         grid-column: 2 / 3;
         grid-row: 2 / 3; }
-      .tp-first .tpf-newest1 {
+      .tp-first .tpf-newest2 {
         grid-column: 2 / 3;
         grid-row: 3 / 4; } }
   .tp-first a {
     text-decoration: none; }
   .tp-first .tpf-carousel {
     height: 100%;
-    width: 100%;
-    overflow: hidden; }
-  .tp-first .tpf-atfirst .tpfa-area {
+    /*
+		overflow-x:scroll;
+		overflow-y:hidden;
+		scroll-snap-type: x mandatory;
+		scroll-behavior: smooth;
+		-webkit-overflow-scrolling: touch;
+		*/
+    overflow: hidden;
+    /*
+		.tpfc-inner::-webkit-scrollbar-track{
+			background-color:rgba(0,0,0,1);
+		}
+		.tpfc-inner::-webkit-scrollbar-thumb {
+			border-radius: 5px;
+			background: #1959A8;
+		}
+	*/ }
+    .tp-first .tpf-carousel .tpfc-inner {
+      height: 100%;
+      width: 100%;
+      display: flex; }
+      .tp-first .tpf-carousel .tpfc-inner a {
+        scroll-snap-align: start; }
+  .tp-first .tpfc-inner .tpv-area, .tp-first .tpf-atfirst .tpv-area, .tp-first .tpf-newest1 .tpv-area, .tp-first .tpf-newest2 .tpv-area {
     height: 100%;
     width: 100%;
     background-size: cover;
@@ -1025,26 +1079,93 @@ h1 {
     justify-content: flex-end;
     align-items: flex-end;
     align-content: flex-end;
-    filter: grayscale(80%) contrast(120%) brightness(120%); }
-    .tp-first .tpf-atfirst .tpfa-area .tpfaa-categ, .tp-first .tpf-atfirst .tpfa-area .tpfaa-title {
+    filter: grayscale(60%) contrast(140%) brightness(140%); }
+    .tp-first .tpfc-inner .tpv-area .tpva-categ, .tp-first .tpfc-inner .tpv-area .tpva-title, .tp-first .tpf-atfirst .tpv-area .tpva-categ, .tp-first .tpf-atfirst .tpv-area .tpva-title, .tp-first .tpf-newest1 .tpv-area .tpva-categ, .tp-first .tpf-newest1 .tpv-area .tpva-title, .tp-first .tpf-newest2 .tpv-area .tpva-categ, .tp-first .tpf-newest2 .tpv-area .tpva-title {
       filter: none;
       font-weight: normal;
       color: #fdfffd; }
-    .tp-first .tpf-atfirst .tpfa-area .tpfaa-categ {
+    .tp-first .tpfc-inner .tpv-area .tpva-categ, .tp-first .tpf-atfirst .tpv-area .tpva-categ, .tp-first .tpf-newest1 .tpv-area .tpva-categ, .tp-first .tpf-newest2 .tpv-area .tpva-categ {
       background-color: rgba(255, 55, 0, 0.8);
       margin-right: 1.5625vw;
       padding: 0 1.5625vw; }
-    .tp-first .tpf-atfirst .tpfa-area .tpfaa-title {
+    .tp-first .tpfc-inner .tpv-area .tpva-title, .tp-first .tpf-atfirst .tpv-area .tpva-title, .tp-first .tpf-newest1 .tpv-area .tpva-title, .tp-first .tpf-newest2 .tpv-area .tpva-title {
       background-color: rgba(43, 24, 0, 0.8);
       margin: 1.5625vw;
+      margin-left: 20%;
       padding: 1.5625vw;
       text-align: center; }
-  @media screen and (max-width: 374px) {
-    .tp-first h2 {
-      font-size: 1em;
-      line-height: 1.3em;
+  .tp-first .tpfc-inner .tpv-area:hover, .tp-first .tpf-atfirst .tpv-area:hover, .tp-first .tpf-newest1 .tpv-area:hover, .tp-first .tpf-newest2 .tpv-area:hover {
+    filter: none;
+    animation: buruburu 0.3s 1 linear alternate; }
+    .tp-first .tpfc-inner .tpv-area:hover .tpva-title, .tp-first .tpf-atfirst .tpv-area:hover .tpva-title, .tp-first .tpf-newest1 .tpv-area:hover .tpva-title, .tp-first .tpf-newest2 .tpv-area:hover .tpva-title {
+      margin-left: 5%; }
+  .tp-first .tpfc-inner .tpv-area {
+    filter: none; }
+  .tp-first .tpfc-inner .tpv-area:hover {
+    animation: none; }
+  .tp-first .tpf-newest1 .tpv-area .tpva-title, .tp-first .tpf-newest2 .tpv-area .tpva-title {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; }
+  @media screen and (max-width: 2400px) {
+    .tp-first .tpfc-inner h2, .tp-first .tpf-atfirst h2 {
+      font-size: 1.6em;
+      line-height: 1.2em;
       letter-spacing: 0.2em; }
+    .tp-first .tpf-newest1 h2, .tp-first .tpf-newest2 h2 {
+      font-size: 1.2em;
+      line-height: 1.2em;
+      letter-spacing: 0.1em; }
+    .tp-first p {
+      font-size: 1.2em;
+      line-height: 1.5em;
+      letter-spacing: 0.2em; } }
+  @media screen and (max-width: 1200px) {
+    .tp-first .tpfc-inner h2, .tp-first .tpf-atfirst h2 {
+      font-size: 1.2em;
+      line-height: 1.2em;
+      letter-spacing: 0.2em; }
+    .tp-first .tpf-newest1 h2, .tp-first .tpf-newest2 h2 {
+      font-size: 1em;
+      line-height: 1.2em;
+      letter-spacing: 0.1em; }
+    .tp-first p {
+      font-size: 1em;
+      line-height: 1.5em;
+      letter-spacing: 0.2em; } }
+  @media screen and (max-width: 580px) {
+    .tp-first .tpfc-inner h2, .tp-first .tpf-atfirst h2 {
+      font-size: 1.2em;
+      line-height: 1.2em;
+      letter-spacing: 0.2em; }
+    .tp-first .tpf-newest1 h2, .tp-first .tpf-newest2 h2 {
+      font-size: 1em;
+      line-height: 1.1em;
+      letter-spacing: 0.1em; }
+    .tp-first p {
+      font-size: 1em;
+      line-height: 1.5em;
+      letter-spacing: 0.2em; } }
+  @media screen and (max-width: 374px) {
+    .tp-first .tpfc-inner h2, .tp-first .tpf-atfirst h2 {
+      font-size: 1em;
+      line-height: 1.2em;
+      letter-spacing: 0.2em; }
+    .tp-first .tpf-newest1 h2, .tp-first .tpf-newest2 h2 {
+      font-size: 0.8em;
+      line-height: 1.1em;
+      letter-spacing: 0.1em; }
     .tp-first p {
       font-size: 0.8em;
       line-height: 1.5em;
       letter-spacing: 0.2em; } }
+
+/*
+-webkit-scrollbar-track{
+	background-color:rgba(0,0,0,1);
+}
+-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: #1959A8;
+}
+*/
