--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -1,10 +1,119 @@
-
+/*--------------------------------------------------------------
+## Top page Block
+--------------------------------------------------------------*/
+.tpv{
+	display:block;
+	width:100%;
+	height:100%;
+	position:relative;
+	
+	.tpv-bg{
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		
+		background-size:cover;
+		background-position: center;
+	}
+	
+	.tpv-area{
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		pointer-events: none;
+		
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: flex-end;
+		align-items: flex-end;
+		align-content: flex-end;
+		
+		.tpva-categ,.tpva-title{
+			filter:none;
+			font-weight:normal;
+			color:$clb-g10
+		}
+		
+		.tpva-categ{
+			background-color:$cla-l08;
+			margin-right:1.5625vw;
+			padding: 0 1.5625vw;
+		}
+		.tpva-title{
+			background-color:$cla-d08;
+			margin:0.5vw 1.5625vw 1.5625vw 10%;
+			padding:0.5vw 1.5625vw ;
+			text-align: center;
+		}
+		
+		
+		@include mq(xl) {
+			h2{
+				font-size:1.6em;
+				line-height:1.1em;
+				letter-spacing:0.2em;
+			}
+			p{
+				font-size:1.2em;
+				line-height:1.4em;
+				letter-spacing:0.2em;
+			}
+		}
+		@include mq(lg) {
+			h2{
+				font-size:1.2em;
+				line-height:1.4em;
+				letter-spacing:0.2em;
+			}
+			p{
+				font-size:0.9em;
+				line-height:1.4em;
+				letter-spacing:0.2em;
+			}
+		}
+		@include mq(md) {
+			h2{
+				font-size:1.2em;
+				line-height:1.1em;
+				letter-spacing:0.2em;
+			}
+			p{
+				font-size:0.9em;
+				line-height:1.4em;
+				letter-spacing:0.2em;
+			}
+		}
+		@include mq(sm) {
+			h2{
+				font-size:1em;
+				line-height:1.1em;
+				letter-spacing:0.2em;
+			}
+			p{
+				font-size:0.8em;
+				line-height:1.5em;
+				letter-spacing:0.2em;
+			}
+		}
+	}
+	.tpv-area:hover{
+		.tpva-title{
+			margin-left:5%;
+		}
+		
+	}
+}
 /*--------------------------------------------------------------
 ## MainView
 --------------------------------------------------------------*/
 .site-header{
 	width:100%;
-	padding:1.5625vw;
+	padding:1.5625vw 1.5625vw 0 1.5625vw;
 	
 	.h-area{
 		width:100%;
@@ -122,91 +231,91 @@
 ## Top page First View
 --------------------------------------------------------------*/
 .tp-first{
-	margin-top:1.5625vw;
-	padding: 0 1.5625vw;
+	margin :3.125vw 1.5625vw;
 	
 	display: grid;
+	grid-gap:1.5625vw 2%;
 	
 	@include mq(xl) {
 		grid-template-columns: 62.5% 37.5%;
 		grid-template-rows: 36.328125vw 12.109375vw 12.109375vw;
-	
+		
 		.tpf-carousel{
 			grid-column: 1 / 2;
 			grid-row: 1 / 4;
 		}
-		.tpf-atfirst{
+		.tpf-newest1{
 			grid-column: 2 / 3;
 			grid-row: 1 / 2;
 		}
-		.tpf-newest1{
+		.tpf-newest2{
 			grid-column: 2 / 3;
 			grid-row: 2 / 3;
 		}
-		.tpf-newest2{
+		.tpf-newest3{
 			grid-column: 2 / 3;
 			grid-row: 3 / 4;
 		}
 	}		
 	@include mq(lg) {
-		grid-template-columns: 62.5% 37.5%;
+		grid-template-columns: 61.5% 36.5%;
 		grid-template-rows: 36.328125vw 12.109375vw 12.109375vw;
 	
 		.tpf-carousel{
 			grid-column: 1 / 2;
 			grid-row: 1 / 4;
 		}
-		.tpf-atfirst{
+		.tpf-newest1{
 			grid-column: 2 / 3;
 			grid-row: 1 / 2;
 		}
-		.tpf-newest1{
+		.tpf-newest2{
 			grid-column: 2 / 3;
 			grid-row: 2 / 3;
 		}
-		.tpf-newest2{
+		.tpf-newest3{
 			grid-column: 2 / 3;
 			grid-row: 3 / 4;
 		}
 	}	
 	@include mq(md) {
-		grid-template-columns: 60% 40%;
-		grid-template-rows: 96.875vw 29.0625vw 29.0625vw;
+		grid-template-columns: 59% 39%;
+		grid-template-rows: 96.875vw 28.28125vw 28.28125vw;
 	
 		.tpf-carousel{
 			grid-column: 1 / 3;
 			grid-row: 1 / 2;
 		}
-		.tpf-atfirst{
+		.tpf-newest1{
 			grid-column: 1 / 2;
 			grid-row: 2 / 4;
 		}
-		.tpf-newest1{
+		.tpf-newest2{
 			grid-column: 2 / 3;
 			grid-row: 2 / 3;
 		}
-		.tpf-newest2{
+		.tpf-newest3{
 			grid-column: 2 / 3;
 			grid-row: 3 / 4;
 		}
 	}
 	@include mq(sm) {
-		grid-template-columns: 60% 40%;
-		grid-template-rows: 96.875vw 29.0625vw 29.0625vw;
+		grid-template-columns: 59% 39%;
+		grid-template-rows: 96.875vw 28.28125vw 28.28125vw;
 	
 		.tpf-carousel{
 			grid-column: 1 / 3;
 			grid-row: 1 / 2;
 		}
-		.tpf-atfirst{
+		.tpf-newest1{
 			grid-column: 1 / 2;
 			grid-row: 2 / 4;
 		}
-		.tpf-newest1{
+		.tpf-newest2{
 			grid-column: 2 / 3;
 			grid-row: 2 / 3;
 		}
-		.tpf-newest2{
+		.tpf-newest3{
 			grid-column: 2 / 3;
 			grid-row: 3 / 4;
 		}
@@ -218,97 +327,29 @@
 	
 	.tpf-carousel{
 		height:100%;
-		/*
-		overflow-x:scroll;
-		overflow-y:hidden;
-		scroll-snap-type: x mandatory;
-		scroll-behavior: smooth;
-		-webkit-overflow-scrolling: touch;
-		*/overflow:hidden;
+		overflow:hidden;
 		.tpfc-inner{
 			height:100%;
-			width:/*305%*/100%;
+			width:100%;
 			display:flex;
 			a{
 				scroll-snap-align: start;
 			}
 		}
-		/*
-		.tpfc-inner::-webkit-scrollbar-track{
-			background-color:rgba(0,0,0,1);
-		}
-		.tpfc-inner::-webkit-scrollbar-thumb {
-			border-radius: 5px;
-			background: #1959A8;
-		}
-	*/
 		
 	}
-	/*
-	.tpf-carousel::-webkit-scrollbar-track{
-		background-color:rgba(0,0,0,1);
-	}
-	.tpf-carousel::-webkit-scrollbar-thumb {
-		border-radius: 5px;
-		background: #1959A8;
-	}
-	*/
 	
-	
-	.tpfc-inner,.tpf-atfirst,.tpf-newest1,.tpf-newest2{
-		.tpv-area{
-			height:100%;
-			width:100%;
-			
-			background-size:cover;
-			background-position: center;
-			
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: flex-end;
-			align-items: flex-end;
-			align-content: flex-end;
-			
-			filter:grayscale(60%) contrast(140%) brightness(140%);
-			
-			.tpva-categ,.tpva-title{
-				filter:none;
-				font-weight:normal;
-				color:$clb-g10
-			}
-			
-			.tpva-categ{
-				background-color:$cla-l08;
-				margin-right:1.5625vw;
-				padding: 0 1.5625vw;
-			}
-			.tpva-title{
-				background-color:$cla-d08;
-				margin:1.5625vw;
-				margin-left:20%;
-				padding:1.5625vw;
-				text-align: center;
-			}
+
+	.tpf-newest1,.tpf-newest2,.tpf-newest3{
+		.tpv-bg{
+			filter:grayscale(85%) contrast(180%) brightness(140%);
 		}
-		.tpv-area:hover{
+		.tpv-bg:hover{
 			filter:none;
 			animation:buruburu 0.3s 1 linear alternate;
-			.tpva-title{
-				margin-left:5%;
-			}
-			
 		}
 	}
-	.tpfc-inner{
-		.tpv-area{
-			filter:none;
-		}
-		.tpv-area:hover{
-			animation:none;
-		}
-	}
-	.tpf-newest1,.tpf-newest2{
+	.tpf-newest2,.tpf-newest3{
 		.tpv-area{
 			.tpva-title{
 				overflow: hidden;
@@ -319,96 +360,103 @@
 	}
 	
 	@include mq(xl) {
-		.tpfc-inner,.tpf-atfirst{
-			h2{
-				font-size:1.6em;
-				line-height:1.2em;
-				letter-spacing:0.2em;
-			}
-		}
-		.tpf-newest1,.tpf-newest2{
+		.tpf-newest2,.tpf-newest3{
 			h2{
 				font-size:1.2em;
 				line-height:1.2em;
 				letter-spacing:0.1em;
 			}
 		}
-		p{
-			font-size:1.2em;
-			line-height:1.5em;
-			letter-spacing:0.2em;
-		}
 	}
 	@include mq(lg) {
-		.tpfc-inner,.tpf-atfirst{
-			h2{
-				font-size:1.2em;
-				line-height:1.2em;
-				letter-spacing:0.2em;
-			}
-		}
-		.tpf-newest1,.tpf-newest2{
+		.tpf-newest2,.tpf-newest3{
 			h2{
 				font-size:1em;
 				line-height:1.2em;
 				letter-spacing:0.1em;
 			}
 		}
-		p{
-			font-size:1em;
-			line-height:1.5em;
-			letter-spacing:0.2em;
-		}
 	}
 	@include mq(md) {
-		.tpfc-inner,.tpf-atfirst{
-			h2{
-				font-size:1.2em;
-				line-height:1.2em;
-				letter-spacing:0.2em;
-			}
-		}
-		.tpf-newest1,.tpf-newest2{
+		.tpf-newest2,.tpf-newest3{
 			h2{
 				font-size:1em;
 				line-height:1.1em;
 				letter-spacing:0.1em;
 			}
 		}
-		p{
-			font-size:1em;
-			line-height:1.5em;
-			letter-spacing:0.2em;
-		}
 	}
 	@include mq(sm) {
-		.tpfc-inner,.tpf-atfirst{
-			h2{
-				font-size:1em;
-				line-height:1.2em;
-				letter-spacing:0.2em;
-			}
-		}
-		.tpf-newest1,.tpf-newest2{
+		.tpf-newest2,.tpf-newest3{
 			h2{
 				font-size:0.8em;
 				line-height:1.1em;
 				letter-spacing:0.1em;
 			}
 		}
-		p{
-			font-size:0.8em;
-			line-height:1.5em;
-			letter-spacing:0.2em;
+	}
+}
+
+/*--------------------------------------------------------------
+## Top page Intro
+--------------------------------------------------------------*/
+.tp-intro{
+	margin :3.125vw 1.5625vw;
+	
+	display: flex;
+	
+	
+	@include mq(xl) {
+		flex-direction: row;
+		justify-content: space-between;
+		
+		.tpi-taco,.tpi-atfirst{
+			height:24.21875vw;
+		}
+		.tpi-taco{
+			width:61.5%;
+		}
+		.tpi-atfirst{
+			width:36.3%;
+		}	
+	}
+	@include mq(lg) {
+		flex-direction: row;
+		justify-content: space-between;
+		
+		.tpi-taco,.tpi-atfirst{
+			height:24.21875vw;
+		}
+		.tpi-taco{
+			width:61.5%;
+		}
+		.tpi-atfirst{
+			width:36.3%;
+		}
+	}
+	@include mq(md) {
+		flex-direction: column;
+		.tpi-taco,.tpi-atfirst{
+			width:100%;
+			height:48.4375vw;
+		}
+	}
+	@include mq(sm) {
+		flex-direction: column;
+		.tpi-taco,.tpi-atfirst{
+			width:100%;
+			height:48.4375vw;
+		}
+	}
+	
+	.tpi-taco{
+		margin-bottom:3.125vw;
+		background-color:red;
+	}
+	.tpi-atfirst{
+		a{
+			text-decoration:none;
 		}
 	}
 }
-/*
--webkit-scrollbar-track{
-	background-color:rgba(0,0,0,1);
-}
--webkit-scrollbar-thumb {
-	border-radius: 5px;
-	background: #1959A8;
-}
-*/
+
