--- a/sass/org/_talk.scss
+++ b/sass/org/_talk.scss
@@ -2,3 +2,128 @@
 /*--------------------------------------------------------------
 ## Talk
 --------------------------------------------------------------*/
+
+.talk-base{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	position:relative;
+	z-index:1;
+	
+	filter: drop-shadow(0.390625vw 0.390625vw 0.390625vw rgba(5, 5, 5, 0.9));
+	
+	&.tkdr-lr{
+		flex-direction: row;
+	}
+	&.tkdr-rl{
+		flex-direction: row-reverse;
+	}
+	
+	.tk-triangle{
+		display: block;
+		width: 0;
+		height: 0;
+		border: 2vw solid transparent;
+		
+		&.tkdr-lr{
+			border-right: 8vw solid #FFFFFF;
+		}
+		&.tkdr-rl{
+			border-left: 8vw solid #FFFFFF;
+		}
+	}
+	
+	.tk-charactor{
+		width:20%;
+		min-width:20%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		
+		img{
+			width:100%;
+			height:auto;
+		}
+		p{
+			display:inline-block;
+			font-size:0.7em;
+		}
+	}
+	
+	.tk-content{
+		&.tkdr-lr{
+			margin:5% 7% 5% 0;
+		}
+		&.tkdr-rl{
+			margin:5% 0 5% 7%;
+		}
+		
+		max-width:60%;
+		background-color:#FFFFFF;
+		border-radius:34% 33% 31% 32% / 21% 22% 23% 20%;
+		padding:5% 3% 5% 7%;
+		
+		position:relative;
+		z-index:auto;
+		height:auto;
+		
+		&::before,&::after{
+			content:'';
+			position:absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			z-index: -1;
+		}
+		&::before{
+			background-color:#FFFFFF;
+			transform: rotate(6deg);
+			border-radius:45% 49% 40% 38% / 22% 32% 28% 33%;
+		}
+		&::after{
+			background-color:#FFFFFF;
+			transform: rotate(-8deg);
+			border-radius:38% 45% 44% 35% / 36% 27% 32% 27%;
+		}
+		
+		p{
+			word-wrap:break-word;
+		}
+		
+		@include mq(xl) {
+			p{
+				font-size:1.6em;
+				line-height:1.4em;
+				letter-spacing:0.1em;
+				margin-bottom:1em;
+			}
+		}
+		@include mq(lg) {
+			p{
+				font-size:1.4em;
+				line-height:1.4em;
+				letter-spacing:0.1em;
+				margin-bottom:1em;
+			}
+		}
+		@include mq(md) {
+			p{
+				font-size:1.2em;
+				line-height:1.2em;
+				letter-spacing:0.1em;
+				margin-bottom:1em;
+			}
+		}
+		@include mq(sm) {
+			p{
+				font-size:1em;
+				line-height:1.2em;
+				letter-spacing:0.1em;
+				margin-bottom:1em;
+			}
+		}
+	}
+}
+
